Fix z-index

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -408,7 +408,7 @@ h1 {
 .tooltip {
 	opacity: 0;
 	position: absolute;
-	z-index: 1000;
+	z-index: -1;
 	width: auto;
 	height: auto;
 	background-color: #000;
